Revert "Use div"
This reverts commit 56e4c5695bd5d3b1144a58da49de017a1af7fd2b.

--- a/directories/people/team/people.html
+++ b/directories/people/team/people.html
@@ -23,7 +23,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-0" class='cat-bio' data-modal='0'><span class='icon bio'></span></div>
+                    <a href="#item-0" class='cat-bio' data-modal='0'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/aabella' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -58,7 +58,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-1" class='cat-bio' data-modal='1'><span class='icon bio'></span></div>
+                    <a href="#item-1" class='cat-bio' data-modal='1'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/gernot-boege-4204a2226/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -90,7 +90,7 @@
                     <div class='department'>Community Dev Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-2" class='cat-bio' data-modal='2'><span class='icon bio'></span></div>
+                    <a href="#item-2" class='cat-bio' data-modal='2'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/vera-b%C3%B6hner-88a39693/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -122,7 +122,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-3" class='cat-bio' data-modal='3'><span class='icon bio'></span></div>
+                    <a href="#item-3" class='cat-bio' data-modal='3'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/dncampo' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -157,7 +157,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-4" class='cat-bio' data-modal='4'><span class='icon bio'></span></div>
+                    <a href="#item-4" class='cat-bio' data-modal='4'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/jicarreterogu' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -192,7 +192,7 @@
                     <div class='department'>BoO</div>
             </div>
             <div class='icons'>
-                    <div href="#item-5" class='cat-bio' data-modal='5'><span class='icon bio'></span></div>
+                    <a href="#item-5" class='cat-bio' data-modal='5'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/challagonda' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -227,7 +227,7 @@
                     <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-6" class='cat-bio' data-modal='6'><span class='icon bio'></span></div>
+                    <a href="#item-6" class='cat-bio' data-modal='6'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/kseniia-chernikova-184553211/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -259,7 +259,7 @@
                     <div class='department'>Admin Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-7" class='cat-bio' data-modal='7'><span class='icon bio'></span></div>
+                    <a href="#item-7" class='cat-bio' data-modal='7'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/viktoryia-danilenko-b664a62a8/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -291,7 +291,7 @@
                     <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-8" class='cat-bio' data-modal='8'><span class='icon bio'></span></div>
+                    <a href="#item-8" class='cat-bio' data-modal='8'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/giacomodepanfilis/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -323,7 +323,7 @@
                     <div class='department'>Operations Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-9" class='cat-bio' data-modal='9'><span class='icon bio'></span></div>
+                    <a href="#item-9" class='cat-bio' data-modal='9'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/depa01' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -358,7 +358,7 @@
                     <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-10" class='cat-bio' data-modal='10'><span class='icon bio'></span></div>
+                    <a href="#item-10" class='cat-bio' data-modal='10'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/lorenzoderitis/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -390,7 +390,7 @@
                     <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-11" class='cat-bio' data-modal='11'><span class='icon bio'></span></div>
+                    <a href="#item-11" class='cat-bio' data-modal='11'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/sandi-dushkaj-700316272' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -422,7 +422,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-12" class='cat-bio' data-modal='12'><span class='icon bio'></span></div>
+                    <a href="#item-12" class='cat-bio' data-modal='12'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/rihabfeki' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -454,7 +454,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-13" class='cat-bio' data-modal='13'><span class='icon bio'></span></div>
+                    <a href="#item-13" class='cat-bio' data-modal='13'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/jason-fox-8a79563/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -486,7 +486,7 @@
                     <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-14" class='cat-bio' data-modal='14'><span class='icon bio'></span></div>
+                    <a href="#item-14" class='cat-bio' data-modal='14'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://de.linkedin.com/in/antje-kelly-222b1a262' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -518,7 +518,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-15" class='cat-bio' data-modal='15'><span class='icon bio'></span></div>
+                    <a href="#item-15" class='cat-bio' data-modal='15'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/luka-keseri%C4%8D-426164260/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -550,7 +550,7 @@
                     <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-16" class='cat-bio' data-modal='16'><span class='icon bio'></span></div>
+                    <a href="#item-16" class='cat-bio' data-modal='16'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/korneev-oleg-projectmanager' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -582,7 +582,7 @@
                     <div class='department'>Community Dev Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-17" class='cat-bio' data-modal='17'><span class='icon bio'></span></div>
+                    <a href="#item-17" class='cat-bio' data-modal='17'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/char_kotterman' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -617,7 +617,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-18" class='cat-bio' data-modal='18'><span class='icon bio'></span></div>
+                    <a href="#item-18" class='cat-bio' data-modal='18'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/yuzhen-li-b242421a4/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -649,7 +649,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-19" class='cat-bio' data-modal='19'><span class='icon bio'></span></div>
+                    <a href="#item-19" class='cat-bio' data-modal='19'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/flopezaguilar' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -684,7 +684,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-20" class='cat-bio' data-modal='20'><span class='icon bio'></span></div>
+                    <a href="#item-20" class='cat-bio' data-modal='20'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/franmelfer/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -716,7 +716,7 @@
                     <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-21" class='cat-bio' data-modal='21'><span class='icon bio'></span></div>
+                    <a href="#item-21" class='cat-bio' data-modal='21'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/xhulja-melyshi-273b66211/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -748,7 +748,7 @@
                     <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-22" class='cat-bio' data-modal='22'><span class='icon bio'></span></div>
+                    <a href="#item-22" class='cat-bio' data-modal='22'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/lmontandon' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -783,7 +783,7 @@
                     <div class='department'>BoO</div>
             </div>
             <div class='icons'>
-                    <div href="#item-23" class='cat-bio' data-modal='23'><span class='icon bio'></span></div>
+                    <a href="#item-23" class='cat-bio' data-modal='23'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/clara-pezuela-2b1257/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -815,7 +815,7 @@
                     <div class='department'>Operations Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-24" class='cat-bio' data-modal='24'><span class='icon bio'></span></div>
+                    <a href="#item-24" class='cat-bio' data-modal='24'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/eprieto/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -847,7 +847,7 @@
                     <div class='department'>Community Dev Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-25" class='cat-bio' data-modal='25'><span class='icon bio'></span></div>
+                    <a href="#item-25" class='cat-bio' data-modal='25'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/tonia-sapia-a171bb63/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -879,7 +879,7 @@
                     <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-26" class='cat-bio' data-modal='26'><span class='icon bio'></span></div>
+                    <a href="#item-26" class='cat-bio' data-modal='26'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/lauraskip/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -911,7 +911,7 @@
                     <div class='department'>Operations Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-27" class='cat-bio' data-modal='27'><span class='icon bio'></span></div>
+                    <a href="#item-27" class='cat-bio' data-modal='27'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/cecilia-setter-72411a1b3/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -943,7 +943,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-28" class='cat-bio' data-modal='28'><span class='icon bio'></span></div>
+                    <a href="#item-28" class='cat-bio' data-modal='28'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/tim-smyth-26225b12a' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -975,7 +975,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-29" class='cat-bio' data-modal='29'><span class='icon bio'></span></div>
+                    <a href="#item-29" class='cat-bio' data-modal='29'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/asma-taamallah/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -1007,7 +1007,7 @@
                     <div class='department'>Operations Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-30" class='cat-bio' data-modal='30'><span class='icon bio'></span></div>
+                    <a href="#item-30" class='cat-bio' data-modal='30'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/%C3%A1ngeles-tejado-s%C3%A1nchez-2a61b411/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -1039,7 +1039,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <div href="#item-31" class='cat-bio' data-modal='31'><span class='icon bio'></span></div>
+                    <a href="#item-31" class='cat-bio' data-modal='31'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/kzangeli/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
