people content updates

--- a/directories/people/bod/people.html
+++ b/directories/people/bod/people.html
@@ -1,4 +1,4 @@
-    <div id='item-0'
+    <div 
         class='grid-item
             secmotic
             spain
@@ -6,6 +6,7 @@
             co-founder ceo
             gold'
     >
+        <span class="grid-scroll-offset" id='item-0'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -38,7 +39,7 @@
             </div>
         </div>
     </div>
-    <div id='item-1'
+    <div 
         class='grid-item
             ficodes
             spain
@@ -46,6 +47,7 @@
             cto
             '
     >
+        <span class="grid-scroll-offset" id='item-1'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -77,7 +79,7 @@
             </div>
         </div>
     </div>
-    <div id='item-2'
+    <div 
         class='grid-item
             meditech
             italy
@@ -85,6 +87,7 @@
             general-manager
             gold'
     >
+        <span class="grid-scroll-offset" id='item-2'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -117,7 +120,7 @@
             </div>
         </div>
     </div>
-    <div id='item-3'
+    <div 
         class='grid-item
             hopu---libelium
             spain
@@ -125,6 +128,7 @@
             cso
             gold'
     >
+        <span class="grid-scroll-offset" id='item-3'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -157,7 +161,7 @@
             </div>
         </div>
     </div>
-    <div id='item-4'
+    <div 
         class='grid-item
             madinah-region-development-authority
             saudi-arabia
@@ -165,6 +169,7 @@
             director
             platinum'
     >
+        <span class="grid-scroll-offset" id='item-4'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -194,7 +199,7 @@
             </div>
         </div>
     </div>
-    <div id='item-5'
+    <div 
         class='grid-item
             atos
             france
@@ -202,6 +207,7 @@
             vp
             platinum'
     >
+        <span class="grid-scroll-offset" id='item-5'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -234,7 +240,7 @@
             </div>
         </div>
     </div>
-    <div id='item-6'
+    <div 
         class='grid-item
             nec
             japan
@@ -242,6 +248,7 @@
             fellow
             platinum'
     >
+        <span class="grid-scroll-offset" id='item-6'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -274,7 +281,7 @@
             </div>
         </div>
     </div>
-    <div id='item-7'
+    <div 
         class='grid-item
             addix
             germany
@@ -282,6 +289,7 @@
             managing-director
             gold'
     >
+        <span class="grid-scroll-offset" id='item-7'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
