--- a/directories/people/fisab/people.html
+++ b/directories/people/fisab/people.html
@@ -1,4 +1,4 @@
-    <div id='item-0'
+    <div 
         class='grid-item
             the-coca-cola-company
             ireland
@@ -6,6 +6,7 @@
             director
             '
     >
+        <span class="grid-scroll-offset" id='item-0'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -34,7 +35,7 @@
             </div>
         </div>
     </div>
-    <div id='item-1'
+    <div 
         class='grid-item
             udg-alliance
             switzerland
@@ -42,6 +43,7 @@
             director
             associates'
     >
+        <span class="grid-scroll-offset" id='item-1'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -71,7 +73,7 @@
             </div>
         </div>
     </div>
-    <div id='item-2'
+    <div 
         class='grid-item
             université-lumière-lyon-2
             france
@@ -79,6 +81,7 @@
             professor
             associates'
     >
+        <span class="grid-scroll-offset" id='item-2'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -111,7 +114,7 @@
             </div>
         </div>
     </div>
-    <div id='item-3'
+    <div 
         class='grid-item
             rwth-aachen-university
             germany
@@ -119,6 +122,7 @@
             professor institute-director
             associates'
     >
+        <span class="grid-scroll-offset" id='item-3'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -148,7 +152,7 @@
             </div>
         </div>
     </div>
-    <div id='item-4'
+    <div 
         class='grid-item
             university-of-cantabria
             spain
@@ -156,6 +160,7 @@
             professor
             associates'
     >
+        <span class="grid-scroll-offset" id='item-4'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -182,7 +187,7 @@
             </div>
         </div>
     </div>
-    <div id='item-5'
+    <div 
         class='grid-item
             universidad-politécnica-de-madrid
             spain
@@ -190,6 +195,7 @@
             professor
             associates'
     >
+        <span class="grid-scroll-offset" id='item-5'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -222,7 +228,7 @@
             </div>
         </div>
     </div>
-    <div id='item-6'
+    <div 
         class='grid-item
             university-of-murcia
             spain
@@ -230,6 +236,7 @@
             professor
             associates'
     >
+        <span class="grid-scroll-offset" id='item-6'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -256,7 +263,7 @@
             </div>
         </div>
     </div>
-    <div id='item-7'
+    <div 
         class='grid-item
             fbk
             italy
@@ -264,6 +271,7 @@
             director
             associates'
     >
+        <span class="grid-scroll-offset" id='item-7'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
