--- a/directories/people/msc/people.html
+++ b/directories/people/msc/people.html
@@ -1,4 +1,4 @@
-    <div id='item-0'
+    <div 
         class='grid-item
             tritux
             tunisia
@@ -6,6 +6,7 @@
             ceo
             ihubs'
     >
+        <span class="grid-scroll-offset" id='item-0'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -37,7 +38,7 @@
             </div>
         </div>
     </div>
-    <div id='item-1'
+    <div 
         class='grid-item
             engineering
             italy
@@ -45,6 +46,7 @@
             director
             smart-energy'
     >
+        <span class="grid-scroll-offset" id='item-1'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -74,7 +76,7 @@
             </div>
         </div>
     </div>
-    <div id='item-2'
+    <div 
         class='grid-item
             nttdata
             spain
@@ -82,6 +84,7 @@
             researcher
             smart-water'
     >
+        <span class="grid-scroll-offset" id='item-2'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -114,7 +117,7 @@
             </div>
         </div>
     </div>
-    <div id='item-3'
+    <div 
         class='grid-item
             teamdev
             italy
@@ -122,6 +125,7 @@
             co-founder ceo
             smart-agrifood'
     >
+        <span class="grid-scroll-offset" id='item-3'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -154,7 +158,7 @@
             </div>
         </div>
     </div>
-    <div id='item-4'
+    <div 
         class='grid-item
             engineering
             italy
@@ -162,6 +166,7 @@
             director
             smart-cities'
     >
+        <span class="grid-scroll-offset" id='item-4'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -191,7 +196,7 @@
             </div>
         </div>
     </div>
-    <div id='item-5'
+    <div 
         class='grid-item
             eppo
             germany
@@ -199,6 +204,7 @@
             cdto
             smart-energy'
     >
+        <span class="grid-scroll-offset" id='item-5'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -230,7 +236,7 @@
             </div>
         </div>
     </div>
-    <div id='item-6'
+    <div 
         class='grid-item
             city-of-herne
             germany
@@ -238,6 +244,7 @@
             cdo
             smart-cities'
     >
+        <span class="grid-scroll-offset" id='item-6'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -267,7 +274,7 @@
             </div>
         </div>
     </div>
-    <div id='item-7'
+    <div 
         class='grid-item
             hopu---libelium
             spain
@@ -275,6 +282,7 @@
             cso
             smart-cities'
     >
+        <span class="grid-scroll-offset" id='item-7'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -307,7 +315,7 @@
             </div>
         </div>
     </div>
-    <div id='item-8'
+    <div 
         class='grid-item
             nec-lab-europe
             germany
@@ -315,6 +323,7 @@
             manager
             smart-industry'
     >
+        <span class="grid-scroll-offset" id='item-8'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -344,7 +353,7 @@
             </div>
         </div>
     </div>
-    <div id='item-9'
+    <div 
         class='grid-item
             ciudades-del-futuro
             argentina
@@ -352,6 +361,7 @@
             director
             ihubs'
     >
+        <span class="grid-scroll-offset" id='item-9'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -381,7 +391,7 @@
             </div>
         </div>
     </div>
-    <div id='item-10'
+    <div 
         class='grid-item
             easy-global-market
             france
@@ -389,6 +399,7 @@
             ceo
             smart-water'
     >
+        <span class="grid-scroll-offset" id='item-10'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -421,7 +432,7 @@
             </div>
         </div>
     </div>
-    <div id='item-11'
+    <div 
         class='grid-item
             engineering
             italy
@@ -429,6 +440,7 @@
             manager
             smart-industry'
     >
+        <span class="grid-scroll-offset" id='item-11'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -461,7 +473,7 @@
             </div>
         </div>
     </div>
-    <div id='item-12'
+    <div 
         class='grid-item
             hochschule-bochum
             germany
@@ -469,6 +481,7 @@
             professor
             smart-energy'
     >
+        <span class="grid-scroll-offset" id='item-12'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -498,7 +511,7 @@
             </div>
         </div>
     </div>
-    <div id='item-13'
+    <div 
         class='grid-item
             rwth-aachen-university
             germany
@@ -506,6 +519,7 @@
             professor institute-director
             smart-energy'
     >
+        <span class="grid-scroll-offset" id='item-13'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -535,7 +549,7 @@
             </div>
         </div>
     </div>
-    <div id='item-14'
+    <div 
         class='grid-item
             engineering
             italy
@@ -543,6 +557,7 @@
             researcher
             smart-water'
     >
+        <span class="grid-scroll-offset" id='item-14'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -572,7 +587,7 @@
             </div>
         </div>
     </div>
-    <div id='item-15'
+    <div 
         class='grid-item
             atb-bremen
             germany
@@ -580,6 +595,7 @@
             researcher
             smart-agrifood'
     >
+        <span class="grid-scroll-offset" id='item-15'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
